test/expected/explain_th_f_v.out
explain void f() throw()
                 ^
18: syntax error: "throw": unexpected token; not a keyword until C++98
declare f as function returning void
